# ironforge

./: .gitignore  AGENT.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  cargo-llvm-cov.toml  ironforge.example.toml
crates/rg-ci/: Cargo.toml
crates/rg-ci/src/: config.rs  lib.rs  runner.rs
crates/rg-cli/: Cargo.toml
crates/rg-cli/src/: main.rs
crates/rg-core/: Cargo.toml
crates/rg-core/src/: lib.rs
crates/rg-core/src/audit/: audit.rs  mod.rs  service.rs
crates/rg-core/src/auth/: ci_token.rs  encryption.rs  jwt.rs  ldap.rs  mod.rs  oci_token.rs  password.rs  ssh_key.rs  sso.rs  totp.rs
crates/rg-core/src/board/: mod.rs  service.rs
crates/rg-core/src/branch_protection/: mod.rs  service.rs
crates/rg-core/src/collaborator/: mod.rs  service.rs
crates/rg-core/src/email/: mod.rs
crates/rg-core/src/import/: github_client.rs  gitlab_client.rs  mod.rs  service.rs
crates/rg-core/src/issue/: service.rs
crates/rg-core/src/label/: mod.rs  service.rs
crates/rg-core/src/lfs/: service.rs
crates/rg-core/src/mirror/: mod.rs  service.rs
crates/rg-core/src/notification/: mod.rs
crates/rg-core/src/org/: mod.rs
crates/rg-core/src/package_registry/: adapter.rs  mod.rs  service.rs  storage.rs
crates/rg-core/src/package_registry/adapters/: cargo.rs  docker.rs  generic.rs  helm.rs  maven.rs  (+5 more)
crates/rg-core/src/platform/: fs.rs  mod.rs  path.rs  process.rs
crates/rg-core/src/pull_request/: service.rs
crates/rg-core/src/release/: mod.rs  service.rs
crates/rg-core/src/repo/: service.rs
crates/rg-core/src/review/: mod.rs  service.rs
crates/rg-core/src/search/: code_indexer.rs  mod.rs  service.rs
crates/rg-core/src/time_tracking/: mod.rs  service.rs
crates/rg-core/src/user/: service.rs
crates/rg-core/src/webhook/: service.rs
crates/rg-core/src/wiki/: service.rs
crates/rg-db/: Cargo.toml
crates/rg-db/src/: lib.rs
crates/rg-db/src/entities/: access_token.rs  artifact.rs  audit_log.rs  board.rs  board_card.rs  board_column.rs  commit_status.rs  import_task.rs  issue.rs  issue_comment.rs  issue_label.rs  label.rs  lfs_object.rs  login_log.rs  mfa_backup_code.rs  milestone.rs  mirror.rs  mod.rs  notification.rs  oauth_account.rs  oci_blob.rs  oci_manifest.rs  oci_repository.rs  oci_upload.rs  organization.rs  organization_member.rs  package.rs  package_file.rs  package_registry.rs  package_version.rs  pipeline.rs  pipeline_job(Mac.lan的冲突副本1_2026-05-10 13-19-26).rs  pipeline_job.rs  pipeline_stage.rs  pr_review.rs  protected_branch.rs  pull_request.rs  release.rs  release_asset.rs  repo_collaborator.rs  (+14 more)
crates/rg-db/src/migrations/: m20260424_000001_create_users.rs  m20260424_000002_create_repositories.rs  m20260424_000003_create_keys_tokens.rs  m20260424_000004_create_issues.rs  m20260424_000005_create_pull_requests.rs  m20260424_000006_create_wiki_lfs_webhooks.rs  m20260424_000007_create_pipelines.rs  m20260424_000008_create_phase6.rs  m20260424_000009_create_phase8(Mac.lan的冲突副本1_2026-05-10 13-26-13).rs  m20260424_000009_create_phase8.rs  m20260427_000001_add_lfs_compression(Mac.lan的冲突副本1_2026-05-10 13-29-20).rs  m20260427_000001_add_lfs_compression.rs  m20260508_000001_create_repo_stars_watches(Mac.lan的冲突副本1_2026-05-10 13-33-19).rs  m20260508_000001_create_repo_stars_watches.rs  m20260508_000002_create_releases.rs  m20260508_000003_create_labels.rs  m20260508_000004_create_commit_statuses.rs  m20260508_000005_create_fts5_indexes.rs  m20260508_000006_add_repo_soft_delete(Mac.lan的冲突副本1_2026-05-10 13-37-26).rs  m20260508_000006_add_repo_soft_delete.rs  m20260510_000001_create_runners.rs  m20260510_000002_alter_pipeline_jobs_add_runner_fields.rs  m20260510_000003_add_pipeline_jobs_updated_at.rs  m20260510_000004_create_artifacts.rs  m20260511_000001_add_pr_head_repo_id.rs  m20260511_000002_add_missing_indexes.rs  m20260511_000003_fix_fts5_triggers.rs  m20260512_000001_create_code_fts.rs  m20260607_000001_create_mirrors.rs  m20260607_000002_create_boards.rs  m20260607_000003_create_time_entries.rs  m20260607_000004_create_import_tasks.rs  m20260607_000005_create_package_registry.rs  m20260607_000006_alter_users_auth.rs  m20260607_000007_create_oauth_accounts.rs  m20260607_000008_create_mfa_backup_codes.rs  m20260607_000009_create_login_logs.rs  m20260607_000010_create_sso_providers.rs  m20260607_000011_create_audit_logs.rs  m20260608_000001_create_oci_tables.rs  (+4 more)
crates/rg-db/src/ops/: artifact_ops.rs  audit_log_ops.rs  board_ops.rs  commit_status_ops.rs  import_task_ops.rs  issue_comment_ops.rs  issue_label_ops.rs  issue_ops.rs  label_ops.rs  lfs_object_ops.rs  login_log_ops.rs  mfa_backup_code_ops.rs  milestone_ops.rs  mirror_ops.rs  mod.rs  notification_ops.rs  oauth_account_ops.rs  oci_ops.rs  org_ops.rs  package_file_ops.rs  package_ops.rs  package_registry_ops.rs  package_version_ops.rs  pipeline_ops.rs  pr_review_ops.rs  protected_branch_ops.rs  pull_request_ops.rs  release_ops.rs  repo_collaborator_ops.rs  repo_ops.rs  repo_star_ops.rs  repo_watch_ops.rs  review_comment_ops.rs  runner_ops.rs  ssh_key_ops.rs  sso_provider_ops.rs  time_entry_ops.rs  token_ops.rs  user_ops.rs  webhook_ops.rs  (+1 more)
crates/rg-http/: Cargo.toml
crates/rg-http/src/: error.rs  git_v2.rs  lib.rs  metrics.rs  middleware.rs  oci.rs  openapi.rs  pagination.rs  rate_limit.rs  security.rs  ws.rs
crates/rg-http/src/api/: admin.rs  ai.rs  artifacts.rs  audit.rs  auth.rs  boards.rs  branch_protection.rs  ci.rs  collaborators.rs  imports.rs  issues.rs  labels.rs  lfs.rs  mfa.rs  mirrors.rs  mod.rs  notifications.rs  orgs.rs  packages.rs  pulls.rs  releases.rs  repo_content.rs  repos.rs  reviews.rs  runners.rs  search.rs  sso.rs  time_tracking.rs  users.rs  webhooks.rs  wiki.rs
crates/rg-http/tests/: api_tests.rs
crates/rg-http/tests/common/: mod.rs
crates/rg-mcp/: Cargo.toml
crates/rg-mcp/src/: client.rs  error.rs  lib.rs  main.rs  protocol.rs
crates/rg-mcp/src/resources/: mod.rs
crates/rg-mcp/src/tools/: mod.rs
crates/rg-runner/: Cargo.toml
crates/rg-runner/src/: main.rs
crates/rg-ssh/: Cargo.toml
crates/rg-ssh/src/: lib.rs
(+107 files in other folders)
