[workspace]
members = [
    "crates/rg-cli",
    "crates/rg-core",
    "crates/rg-git",
    "crates/rg-ssh",
    "crates/rg-http",
    "crates/rg-db",
    "crates/rg-ci",
]
resolver = "2"

[workspace.dependencies]
# HTTP
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# SSH
russh = "0.51"
russh-keys = "0.45"

# Database
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Auth
argon2 = "0.5"
jsonwebtoken = "9"
password-hash = "0.5"
rand_core = "0.6"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder", "hostname", "smtp-transport"] }

# Crypto
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# TLS
rustls-pemfile = "2"
tokio-rustls = "0.26"
axum-server = { version = "0.7", features = ["tls-rustls"] }

# Config
toml = "0.8"

# Log rotation
tracing-appender = "0.2"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# DB migration
sea-orm-migration = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
