[package]
name = "rg-ci"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sea-orm = { workspace = true }
chrono = { workspace = true }
rg-db = { path = "../rg-db" }
