[package]
name = "rg-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rg-db = { path = "../rg-db" }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
argon2 = { workspace = true }
password-hash = { workspace = true }
jsonwebtoken = { workspace = true }
sea-orm = { workspace = true }
