[package]
name = "rg-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rg-db = { path = "../rg-db" }
gix = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
argon2 = { workspace = true }
password-hash = { workspace = true }
rand_core = { workspace = true, features = ["std"] }
jsonwebtoken = { workspace = true }
sea-orm = { workspace = true }
reqwest = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
lettre = { workspace = true }
zstd = "0.13"
home = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
zip = { workspace = true }
toml = { workspace = true }
serde_yaml = { workspace = true }

# Auth / SSO / 2FA
base64 = { workspace = true }
openidconnect = { workspace = true }
totp-rs = { workspace = true }
qrcode = { workspace = true }
ldap3 = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
urlencoding = "2.1"
http = "1"
