[package]
name = "rg-db"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
rand = "0.8"
