[package]
name = "rg-http"
version = "0.1.0"
edition = "2021"

[dependencies]
rg-git = { path = "../rg-git" }
rg-core = { path = "../rg-core" }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
