[package]
name = "rg-http"
version = "0.1.0"
edition = "2021"

[dependencies]
rg-git = { path = "../rg-git" }
rg-core = { path = "../rg-core" }
rg-db = { path = "../rg-db" }
rg-ci = { path = "../rg-ci" }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sea-orm = { workspace = true }
chrono = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
axum-server = { workspace = true }
