[package]
name = "rg-http"
version = "0.1.0"
edition = "2021"

[dependencies]
rg-git = { path = "../rg-git" }
rg-core = { path = "../rg-core" }
rg-db = { path = "../rg-db" }
rg-ci = { path = "../rg-ci" }
gix = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sea-orm = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
axum-server = { workspace = true }
utoipa = { version = "5", features = ["chrono"] }
utoipa-swagger-ui = "8"
uuid = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = "3"
socket2 = "0.5"
