[package]
name = "rg-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ironforge-mcp"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
urlencoding = "2"

# HTTP client (call IronForge REST API)
reqwest = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Env / Config
dotenv = "0.15"
