[package]
name = "rg-runner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ironforge-runner"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true, features = ["derive"] }
reqwest = { workspace = true, features = ["json"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
