[package]
name = "rg-ssh"
version = "0.1.0"
edition = "2021"

[dependencies]
rg-git = { path = "../rg-git" }
rg-core = { path = "../rg-core" }
rg-db = { path = "../rg-db" }
tokio = { workspace = true }
russh = { workspace = true }
russh-keys = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
sea-orm = { workspace = true }
